GNU SASL LIBRARY NEWS -- History of user-visible changes.
Copyright (C) 2002, 2003, 2004, 2005, 2006, 2007, 2008, 2009 Simon Josefsson
See the end for copying conditions.

* Version 1.3 (unreleased)

** libgsasl: Implement SCRAM-SHA-1.
New properties are GSASL_SCRAM_ITER and GSASL_SCRAM_SALT.

** API and ABI modifications.
GSASL_SCRAM_ITER: ADDED.
GSASL_SCRAM_SALT: ADDED.

* Version 1.2 (released 2009-06-13)

** libgsasl: The library needs at most around 250 bytes of stack frame size.
This is useful for embedded platforms with limited amount of RAM.
Some functions that required a large stack has been rewritten, in
order to achieve this goal.  The 250 byte limit is now part of the
regression test suite, so hopefully no function will ever require more
than that amount of stack space in the future.

** libgsasl: Obsolete gsasl_md5pwd_get_password rewritten to use modern API.

** Include a copy of the GPLv3 license in the archive.
Some parts, such as the gnulib self-tests, are licensed under the
GPLv3.  The library remains licensed under LGPLv2.1+ though.  Reported
by Vincent Untz <vuntz@opensuse.org> in
<http://permalink.gmane.org/gmane.comp.gnu.gsasl.general/225>.

** API and ABI modifications.
No changes since last version.

* Version 1.1 (released 2009-03-25)

** DIGEST-MD5 client: Add support for client integrity layer.
The layer is not used by default, the application needs to request it
specifically in a callback or by setting the GSASL_QOP property.

** DIGEST-MD5: Decoding of integrity protected sessions now works better.
Reported by Andery Melnikov <temnota.am@gmail.com>.

** libgsasl: Add new property GSASL_QOPS.
The DIGEST-MD5 server query for this property to get the set of
quality of protection (QOP) values to advertise.  The property holds
strings with comma separated keywords denoting the set of qops to use,
for example "qop-auth, qop-int".  Valid keywords are "qop-auth",
"qop-int", and "qop-conf".  The GSSAPI mechanism may be enhanced to